themes/gdd/static/css/style.css
body, html {
	margin: 0;
	padding: 0;
	font-family:"Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
}

.menu {
	width: 700px;
	background-color: #ACD1E9;
	margin: 0 auto;
}

.menu.fixed {
	width: 100%;
	line-height: 40px;
	position: fixed;
	z-index: 999;
	margin: 0em;
}

.menuright {
	float: right;
}

.column {
	width: 780px;
	margin: 0 auto;
}

.header {
	padding-top: 40px;
	text-align: center;
}

.title {
	font-size: 30px;
}

.table {
	box-sizing: border-box;
	width: 700px;
	color: rgba(0,0,0,0.8);
	border-collapse: collapse;
	margin: 1em auto;
	padding: 1em;
	border-radius: 5px 5px 5px 5px;
}

th {
	border: 1px solid rgba(0,0,0,0.1);
	border-radius: 5px 0px 0px 0px;
	background-color: #F5FAFA;
}

.th_first {
	width: 125px;
	min-width: 125px;
	height: 40px;
	max-width: 100%;
	max-height: 100%;
	text-align: center;
}

.th_rest {
	width: 42px;
	min-width: 42px;
	max-width: 42px;
	font-size: 16px;
	text-align: center;
	vertical-align: center;
}

td {
	border: 1px solid rgba(0,0,0,0.1);
	border-radius: 5px 0px 0px 0px;
	padding: 0px;
}

td.nodata {
	text-align: center;
}

div.guide {
	display: inline-block;
	width: 100%;
	text-align: center;
	margin-top: 1em;
}

div.outer {
	text-align: center;
	width: 200px;
	margin: 0em 0em;
	display: inline-block;
}

td.link {
	text-align: center;
}

td.th_first img {
	max-width: 100%;
	max-height: 100%;
	height: auto;
	display: inline-block;
}

img.internal {
	width: 35px;
	height: 35px;
	display: inline-block;
	padding-right: 10px;
}

.internal {
	display: inline-block;
	vertical-align: middle;
	font-weight: bold;
}

td.smile img {
	width: 35px;
	height: 35px;
	margin-left: auto;
	margin-right: auto;
	display: block;
}


.true {
	background-color: #C9E9E0;
}

tr.true:hover {
	background-color: #DFF0D8;
}

tr.false:hover {
	background-color: #F5FAFA;
}

.some {
	background-color: #C9E9E0;
}

thead {
	border-bottom: 1px solid rgba(0,0,0,0.03);
	color: rgba(0,0,0,0.8);
}

footer div {
	text-align: center;
}

